@@ -2,8 +2,8 @@ Package: PureCN
 Type: Package
 Title: Copy number calling and SNV classification using
     targeted short read sequencing
-Version: 1.11.16
-Date: 2018-10-12
+Version: 1.11.17
+Date: 2018-10-18
 Authors@R: c(person("Markus", "Riester", role=c("aut", "cre"),
         email="markus.riester@novartis.com"),
     person("Angad P.", "Singh", role="aut"))
@@ -50,7 +50,6 @@ Suggests:
     TxDb.Hsapiens.UCSC.hg19.knownGene,
     org.Hs.eg.db,
     covr,
-    devtools,
     testthat
 VignetteBuilder: knitr
 License: Artistic-2.0
