@@ -26,9 +26,9 @@ runAbsoluteCN(normal.coverage.file = NULL, tumor.coverage.file = NULL,
   interval.file = NULL, max.dropout = c(0.95, 1.1), min.logr.sdev = 0.15,
   max.logr.sdev = 0.6, max.segments = 300, min.gof = 0.8,
   plot.cnv = TRUE, cosmic.vcf.file = NULL, DB.info.flag = "DB",
-  POPAF.info.field = "POP_AF", model = c("beta", "betabin"),
-  post.optimize = FALSE, speedup.heuristics = 2, BPPARAM = NULL,
-  log.file = NULL, verbose = TRUE)
+  POPAF.info.field = "POP_AF", min.pop.af = 5e-04, model = c("beta",
+  "betabin"), post.optimize = FALSE, speedup.heuristics = 2,
+  BPPARAM = NULL, log.file = NULL, verbose = TRUE)
 }
 \arguments{
 \item{normal.coverage.file}{Coverage file of normal control (optional
@@ -266,6 +266,9 @@ if it is from an unfiltered dbSNP VCF.}
 \item{POPAF.info.field}{As alternative to a flag, use an info field that
 contains population allele frequencies. The \code{DB} info flag has priority
 over this field when both exist.}
+
+\item{min.pop.af}{Minimum population allele frequency in 
+\code{POPAF.info.field} to set a high germline prior probability.}
 
 \item{model}{Use either a beta or a beta-binomial distribution for fitting
 observed to expected allelic fractions of alterations in \code{vcf.file}. 
